# pygtktalog

./: .gitignore  MANIFEST.in  Makefile  README  README.rst  cleanup.sh  cmdcatalog.py  config.py  convert_1.x_to_2.x.py  db.py  deviceHelper.py  dialogs.py  extract_gettext.sh  files.py  filetypeHelper.py  generate_pot.py  gtktalog.py  img.py  katalog_convert_1.0rc_to_1.0.py  mainWindow.py  mainwin.py  moviedb.py  pavement.py  preferences.py  prefs_prefs.py  prepare_dist_package.sh  project.vim  pyGTKtalog  pyGTKtalog.py  pygtktalog.py  requirements.txt  runtests.sh  setup.cfg  setup.py  tox.ini
db/src/: moviedb_schema.sql
example/: README.rst  example.sqlite
glade/: config.glade  dialogs.glade  main.glade  moviedb.glade  prefs.glade
locale/: pl.po  pygtktalog.pot
mvc/: main_window.py  old_main_window.py  pyGTKtalog  pygtktalog.py
mvc/glade/: config.glade  dialogs.glade  foo.glade  main.glade
mvc/pixmaps/: mainicon2.xcf
pixmaps/: mainicon.xcf
pycatalog/: __init__.py  dbcommon.py  dbobjects.py  logger.py  misc.py  scan.py  thumbnail.py  video.py
pygtktalog/: __init__.py  dbcommon.py  dbobjects.py  dialogs.py  logger.py  misc.py  pygtkutils.py  scan.py  thumbnail.py  video.py
pygtktalog/controllers/: details.py  discs.py  files.py  main.py  tags.py
pygtktalog/gtk2/: gui.py
pygtktalog/models/: details.py  discs.py  files.py  main.py
pygtktalog/views/: main.py  main_menu.py  main_toolbar.py
resources/glade/: config.glade  (+3 more)
scripts/: cmdcatalog.py  gtktalog.py
test/: run_tests.py
tests/: dbcommon_test.py  misc_test.py  scan_test.py  video_test.py
(+65 files in other folders)
